# Envelope_py

./: LICENSE  README.md
envelope_project/: pyproject.toml
envelope_project/envelope_analysis/: _init_.py  analysis.py  envelope.py  io.py  plotting.py  preprocessing.py
