[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mylib"
version = "0.1.0"
description = "Envelope detection and signal processing utilities"
authors = [
  { name = "Ishan Kanade", email = "ikanade@umich.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy"
]

[tool.setuptools.packages.find]
packages = ["."]
